--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,11 @@
+.image-container {
+    width: 100%;
+    max-width: 600px;
+    margin-left: auto;
+    margin-right: auto;
+}
+  
 .custom-image-size {
-    width: 2000px;
-    max-width: 200%;
-  }
+    width: 100%;
+    max-width: 600px;
+}
