--- a/css/main.css
+++ b/css/main.css
@@ -1,11 +1,11 @@
 .image-container {
     width: 100%;
-    max-width: 600px;
+    max-width: 20em;
     margin-left: auto;
     margin-right: auto;
 }
   
 .custom-image-size {
     width: 100%;
-    max-width: 600px;
+    max-width: 20em;
 }
